trunk/Archive2/23/afbff325dc4674/output
main.cpp:3:0: warning: ignoring #pragma error  [-Wunknown-pragmas]
     #pragma error("HALP")
 ^
main.cpp:2:1: error: expected unqualified-id before 'if'
 if defined(TESTING) && (TESTING == 1)
 ^
